--- a/content/data/config.json
+++ b/content/data/config.json
@@ -69,5 +69,5 @@
         ],
         "content": "&copy; Stackbit. All rights reserved. This Jamstack site was created with <a href=\"https://www.stackbit.com/?utm_source=deployed-footer\" target=\"_blank\" rel=\"noopener\">Stackbit</a>. Create yours <a href=\"https://app.stackbit.com/create?theme=starter&utm_source=deployed-footer\" target=\"_blank\" rel=\"noopener\">now</a>"
     },
-    "domain": "https://futuristic-neptune-a6f6d.netlify.app"
+    "domain": "https://smooth80s.com/"
 }
